--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@ This project is the virtual project that includes all core subprojects.
   </description>
 
   <properties>
-    <!-- Used in parent to deploy site on github. -->
-    <github.site.repositoryName>argouml</github.site.repositoryName>
-  </properties>
+  <sonar.organization>grestipher</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
   <scm>
     <url>${github.site.org}/${github.site.repositoryName}</url>
     <connection>scm:git:${github.site.org}/${github.site.repositoryName}.git</connection>
